--- a/index.html
+++ b/index.html
@@ -395,6 +395,19 @@
 				<div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
+							<img  class="img-photo" src="assets/img/volunteers/jenny.jpeg" alt="">
+						</div>
+						<div class="ml-3">
+							<p>Eulices Lopez Pintado</p>
+							<a href="https://www.linkedin.com/in/jennyvegag/" target="_blank">
+								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 ">
+					<div class="card-volunteers">
+						<div>
 							<img  class="img-photo" src="assets/img/volunteers/ada.jpeg" alt="">
 						</div>
 						<div class="ml-3">
